# environs

./: .gitignore  .travis.yml  Makefile  README.md  build.sh  default.nix  minimise-docker-image.sh  node.nix  push.sh  python.nix  r.nix  terminal.nix
.build/: Dockerfile  build.sh  push.sh  run.sh  vars.sh
.builder/: Dockerfile  run.sh
.install/r/: r-packages-downloads.R  r-packages-install.R
.nix/: docker.nix  language-environ.nix  main.nix  manifest.nix  run.nix  shell.nix
.shrink/: README.md  shrink-docker.sh
.stats/r/: .gitignore  stats.R
.test/: test-running.bats  test.sh
.test/shrink-alpha-documents/: Dockerfile  cmd.sh  test.sh
alpha/: Dockerfile  default.nix  packages-python.nix  packages-r.nix
alpha/node/: node-packages.json  node-packages.nix
base/: default.nix
base/node/: default.nix  env.nix  host.nix  language.nix  packages.json
base/py/: default.nix  env.nix  host.nix
base/r/: default.nix  env.nix  host.nix  language.nix
core/: .gitignore  README.md  default.nix  packages-node.nix  packages-python.nix  packages-r.nix
core/node/: README.md  default.nix  packages.nix
core/py/: default.nix  language.nix  packages.nix
core/r/: default.nix  packages.nix
images/base/: default.nix
images/mega/: default.nix
mega/: default.nix
mega/node/: default.nix  packages.nix
nix/: Dockerfile  docker.nix  main.nix  register.nix  run.nix
package-stats/: package-stats.cabal
package-stats/src/: Main.hs
package-stats/test/: Main.hs
rho/: .collect.sh  .gitignore  Dockerfile  r-packages-rho.txt
tests/: test-running.bats  test.sh
(+40 files in other folders)
